--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
         to { opacity: 1; transform: translateY(0); }
       }
     </style>
-  <script type="importmap">
+    <!-- 
+      The following placeholder is replaced by Docker CMD at runtime 
+      via docker-entrypoint.sh
+    -->
+    <!--__RUNTIME_CONFIG__-->
+<script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@^19.2.3",
@@ -48,14 +53,13 @@
     "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
     "jszip": "https://esm.sh/jszip@^3.10.1",
     "jspdf": "https://esm.sh/jspdf@^3.0.4",
-    "otpauth": "https://esm.sh/otpauth@^9.2.2",
-    "qrious": "https://esm.sh/qrious@^4.0.2",
     "vite": "https://esm.sh/vite@^7.3.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "otpauth": "https://esm.sh/otpauth@^9.4.1",
+    "qrious": "https://esm.sh/qrious@^4.0.2"
   }
 }
 </script>
-<!--__RUNTIME_CONFIG__-->
 </head>
   <body>
     <div id="root"></div>
